# troonhook

./: .gitignore  CMakeLists.txt  README.md  inject.sh  launch_wrapper.sh  runtime_inject.sh
.github/workflows/: update-offsets.yml
include/: offsets.h
scripts/: update_offsets.py
src/: bhop.cpp
